--- a/app/src/main/res/layout/activity_import.xml
+++ b/app/src/main/res/layout/activity_import.xml
@@ -33,7 +33,7 @@
             android:layout_weight="1"
             android:text="@string/label_settings_import"
             android:textColor="#333333"
-            android:textSize="@dimen/dp_19"
+            android:textSize="@dimen/sp_18"
             tools:text="测试内容" />
 
         <TextView
@@ -45,8 +45,93 @@
             android:paddingVertical="@dimen/dp_8"
             android:text="@string/label_import_add"
             android:textColor="#333333"
-            android:textSize="@dimen/dp_16" />
+            android:textSize="@dimen/dp_16"
+            android:visibility="gone" />
     </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_import_from_file"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ripple_settings_item"
+        android:clickable="true"
+        android:focusable="true"
+        android:paddingHorizontal="@dimen/dp_16"
+        android:paddingVertical="@dimen/dp_10"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+        <ImageView
+            android:id="@+id/iv_import_from_file"
+            android:layout_width="@dimen/dp_20"
+            android:layout_height="@dimen/dp_20"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/icon_import_file" />
+
+        <TextView
+            android:id="@+id/tv_import_from_file_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/iv_import_from_file"
+            android:layout_marginStart="@dimen/dp_15"
+            android:layout_toEndOf="@+id/iv_import_from_file"
+            android:text="文件"
+            android:textColor="#333333"
+            android:textSize="@dimen/sp_16" />
+
+        <TextView
+            android:id="@+id/tv_import_from_file_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_import_from_file_title"
+            android:layout_alignLeft="@+id/tv_import_from_file_title"
+            android:layout_marginTop="@dimen/dp_4"
+            android:text="从文件导入"
+            android:textColor="#666666"
+            android:textSize="@dimen/sp_14" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_import_from_cloud"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ripple_settings_item"
+        android:clickable="true"
+        android:focusable="true"
+        android:paddingHorizontal="@dimen/dp_16"
+        android:paddingVertical="@dimen/dp_10"
+        app:layout_constraintTop_toBottomOf="@+id/rl_import_from_file">
+
+        <ImageView
+            android:id="@+id/iv_import_from_cloud"
+            android:layout_width="@dimen/dp_20"
+            android:layout_height="@dimen/dp_20"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/icon_import_cloud" />
+
+        <TextView
+            android:id="@+id/tv_import_from_cloud_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/iv_import_from_cloud"
+            android:layout_marginStart="@dimen/dp_15"
+            android:layout_toEndOf="@+id/iv_import_from_cloud"
+            android:text="URL"
+            android:textColor="#333333"
+            android:textSize="@dimen/sp_16" />
+
+        <TextView
+            android:id="@+id/tv_import_from_cloud_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_import_from_cloud_title"
+            android:layout_alignLeft="@+id/tv_import_from_cloud_title"
+            android:layout_marginTop="@dimen/dp_4"
+            android:text="从URL导入"
+            android:textColor="#666666"
+            android:textSize="@dimen/sp_14" />
+    </RelativeLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/secret_input_layout"
@@ -55,6 +140,7 @@
         android:layout_marginHorizontal="@dimen/dp_12"
         android:layout_marginTop="@dimen/dp_10"
         android:hint="@string/label_import_secret"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="@+id/toolbar"
